# randd-architect-1day-intern-2025

./: .dockerignore  .gitignore  .html  2129392953.html  2129392953aaa.html  3959613569.html  CLAUDE.md  Dockerfile  Makefile  README.md  cards.json  client_test.py  contacts.json  crads.json  crawl_companies.py  fdkj.html  get_data.py  graph.html  main.py  pyproject.toml  start_app.sh  test.py  visualize_graph.py  あああああ.html
.devcontainer/: devcontainer.json
.github/actions/setup-linter/: action.yml
.github/workflows/: auto-assign.yaml  push-docker-image.yaml  python-lint.yaml
app/: api.py  api_client.py  business_card_recognition.py  cand.json  company_map.py  config.py  data_processor.py  data_visualization.py  datatype.py  main.py  sample.py  util.py  utils.py  visualizations.py
app/components/: __init__.py  analytics.py  business_cards.py  contact_history.py  similarity_network.py
app/config/: __init__.py  settings.py
app/crud/: __init__.py  business_cards.py  contact_history.py  models.py
app/data/: companies.csv  contacts.csv
app/models/: __init__.py  company.py  contacts.py  my_company_member.py  other_company_member.py
app/pages/: page1.py
app/source/: get_cards.py  get_owner_cards.py
app/ui/: corporate_dashboard.py  personal_dashboard.py  sidebar.py
app/views/: __init__.py  dashboard.py  search.py
docker/: Dockerfile  compose.yaml
docs/: README.md  setup.md
tests/: test_main.py  test_sample.py
