[tool.poetry]
name = "app"
version = "0.1.0"
description = "1day intern app"
authors = ["Sansan, Inc."]
license = "Proprietary"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
streamlit = "^1.43.2"
streamlit-agraph = "^0.0.45"
requests = "^2.32.3"
yarl = "^1.20.0"
networkx = "^3.4.2"
matplotlib = "^3.10.3"
pyvis = "^0.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
mypy = "^1.15.0"
pytest = "^8.3.5"
types-requests = "^2.32.0.20250306"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
ignore_errors = false
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "tests",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # missing-trailing-comma
    "COM812",
    # ambiguous-variable-name
    "E741",
    #  single-line-implicit-string-concatenation
    "ISC001",
    # assert
    "S101",
    # suspicious-non-cryptographic-random-usage
    "S311",
    # unnecessary-assign
    "RET504",
    # magic-value-comparison
    "PLR2004",
    # pydocstyle
    "D",
    # flake8-annotations
    "ANN",
]
mccabe.max-complexity = 5
