[project]
name = "app"
version = "0.1.0"
description = "1day intern app"
requires-python = ">=3.10,<3.14"
dependencies = [
    "streamlit>=1.43.2",
    "streamlit-agraph>=0.0.45",
    "requests>=2.32.3",
    "pydantic>=2.11.6",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "types-requests>=2.32.0.20250306",
]

[tool.mypy]
check_untyped_defs = true
ignore_errors = false
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "COM812",   # missing-trailing-comma
    "E741",     # ambiguous-variable-name
    "ISC001",   # single-line-implicit-string-concatenation
    "S101",     # assert
    "S311",     # suspicious-non-cryptographic-random-usage
    "RET504",   # unnecessary-assign
    "PLR2004",  # magic-value-comparison
    "D",        # pydocstyle
    "ANN",      # flake8-annotations
]
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101",     # assert
    "PLR2004",  # magic-value-comparison
    "INP001",   # input
    "D"         # pydocstyle
]

[tool.ruff.lint.mccabe]
max-complexity = 5
